made the alignment issue with team and categories lists a little better -- not fixed

--- a/frontend/src/assets/styles/components/_settings.scss
+++ b/frontend/src/assets/styles/components/_settings.scss
@@ -3,7 +3,7 @@
   padding: 20px;
   margin: 0 auto;
   border: 24px solid #1f9bcf;
-  height: 325px;
+  height: 290px;
   overflow: scroll;
   overflow-x: hidden;
 
